--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
 
 {% block content %}
 <div class="konten">
-    {% for i in foto %}
+    {% for i in cerita_list %}
     <div class="kartu">
         <div class="kepala">
             {% if i.anonymous %}
